--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,6 +2,8 @@
 @import "px2em";
 @import "adaptiveValue";
 @import "reset";
+@import "colors";
+@import "icons";
 @import "global";
 @import "header";
 @import "footer";
