--- a/scss/mediaQueries.scss
+++ b/scss/mediaQueries.scss
@@ -4,6 +4,11 @@
 @media (min-width: em(1200px)) {
 }
 @media (min-width: em(992px)) {
+	.login-list {
+		flex-direction: column;
+		min-width: 100px;
+		min-height: 150px;
+	}
 }
 @media (min-width: em(768px)) {
 }
@@ -15,6 +20,114 @@
 @media (max-width: em(1199px)) {
 }
 @media (max-width: em(991px)) {
+	.menu {
+		margin-right: 0;
+	}
+	.menu__icon {
+		margin-left: em(10px);
+		z-index: 5;
+		display: block;
+		position: relative;
+		width: 30px;
+		height: 18px;
+		cursor: pointer;
+
+		span,
+		&::before,
+		&::after {
+			left: 0;
+			position: absolute;
+			height: 5%;
+			width: 100%;
+			transition: all 0.3s ease 0s;
+			background-color: $main-color;
+		}
+		&::before,
+		&::after {
+			content: " ";
+		}
+		&::before {
+			top: 0;
+		}
+		&::after {
+			bottom: 0;
+		}
+		span {
+			top: 50%;
+			transform: scale(1) translate(0px, -50%);
+		}
+		&._active {
+			span {
+				transform: scale(0);
+			}
+			&::before {
+				top: 50%;
+				transform: rotate(-45deg) translate(0px, -50%);
+			}
+			&::after {
+				bottom: 50%;
+				transform: rotate(45deg) translate(0px, 50%);
+			}
+		}
+	}
+	.header {
+		&__menu {
+			margin-bottom: em(20px);
+		}
+		&-btn__demo {
+			background-color: $main-color;
+		}
+		&__content {
+			overflow: auto;
+			position: fixed;
+			top: -100%;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			padding: em(100px) em(30px) em(30px) em(30px);
+			flex-direction: column;
+			align-items: center;
+			background-color: rgba($color: $accent-color, $alpha: 0.7);
+			transition: top 0.3s ease 0s;
+			&::before {
+				content: " ";
+				position: fixed;
+				width: 100%;
+				top: 0;
+				left: 0;
+				@include adaptiv-value("height", 90, 60, 0);
+				background-color: rgba($color: $white-color, $alpha: 0.9);
+				z-index: 3;
+			}
+			&._active {
+				top: 0;
+			}
+		}
+	}
+	.menu {
+		&__list {
+			li {
+				padding: 10px 0;
+				text-align: center;
+			}
+			> :not(:last-child) {
+				margin-right: 0px;
+			}
+		}
+		&__link {
+			font-size: em(24px);
+		}
+	}
+	.login-list {
+		min-width: 200px;
+		min-height: 75px;
+		flex-direction: row;
+		margin: em(15px);
+		li {
+			padding: em(15px);
+			font-size: em(18px);
+		}
+	}
 }
 @media (max-width: em(767px)) {
 }
