--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,9 +1,12 @@
 @import "fontsPreload";
+@import "fonts";
+@import "iconsfont";
 @import "px2em";
 @import "adaptiveValue";
 @import "reset";
 @import "colors";
 @import "icons";
+@import "theme";
 @import "global";
 @import "header";
 @import "footer";
