--- a/scss/header.scss
+++ b/scss/header.scss
@@ -4,8 +4,8 @@
 	width: 100%;
 	@include adaptiv-value("height", 90, 60, 0);
 	padding: em(25px) 0;
-	background-color: $white-color;
-	color: $main-color;
+	background-color: var(--base-color);
+	color: var(--main-color);
 	&__container-big {
 		display: flex;
 		align-items: center;
@@ -23,9 +23,17 @@
 		display: flex;
 		align-items: center;
 		z-index: 2;
+		transition: all 0.3s ease 0s;
+		&:hover {
+			filter: drop-shadow(0px 0px 5px rgba(34, 160, 154, 0.37));
+		}
 	}
 
 	&__content {
+		display: flex;
+	}
+
+	&-content__wrapper {
 		display: flex;
 	}
 
@@ -34,11 +42,22 @@
 		align-items: center;
 		z-index: 2;
 	}
-
-	&__theme {
-	}
 }
 .logo {
+	width: 100%;
+	height: 100%;
+	&-link {
+		display: table;
+		&.icon-logo {
+			font-size: em(75px, 14px);
+		}
+	}
+	&__dark {
+		display: none;
+	}
+	&__light {
+		display: none;
+	}
 }
 .menu {
 	display: flex;
@@ -66,7 +85,7 @@
 			}
 		}
 		z-index: 2;
-		@media (min-width: 991px) {
+		@media (min-width: em(992px)) {
 			display: flex;
 			align-items: center;
 			> li {
@@ -87,7 +106,7 @@
 		position: absolute;
 		bottom: 0;
 		left: 0;
-		background-color: $accent-color;
+		background-color: var(--accent-color);
 		height: em(1.5px);
 		transition: all 0.3s ease 0s;
 		border-radius: 0.3em;
@@ -118,10 +137,10 @@
 	font-size: 13px;
 	line-height: 1.54em;
 	position: relative;
-	padding: 10px 0;
+	padding: 15px 0;
 	&::after {
 		content: " ";
-		border: solid $main-color;
+		border: solid var(--main-color);
 		border-width: 0 1.9px 1.9px 0;
 		display: inline-block;
 		padding: 3.5px;
@@ -130,15 +149,15 @@
 		margin-left: em(10px);
 		margin-top: em(-5px);
 	}
-	.login-list {
+	&-list {
 		display: flex;
 		justify-content: center;
 		position: absolute;
 		top: 100%;
-		right: -100%;
-		padding: 7.5px;
+		right: -50%;
+		padding: 10px 15px;
 		border-radius: 3px;
-		background-color: gainsboro;
+		background-color: var(--light-color);
 		transition: all 0.6s ease 0s;
 
 		@extend %invisible;
@@ -147,9 +166,12 @@
 			align-items: center;
 			justify-content: center;
 			flex: 1 1 auto;
+			& a::before {
+				margin-right: em(15px);
+			}
 		}
 		a {
-			color: $accent-color;
+			color: var(--accent-color);
 		}
 	}
 }
@@ -162,9 +184,10 @@ body._pc .login:hover {
 
 	.login-list {
 		@extend %visible;
+		@media (max-width: em(991px)) {
+			transform: translate(50%, 0);
+		}
 	}
 }
 
-//* --------------------------------- *//
-
-//* --------------------------------- *//
+//* *//
