--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,15 +1,14 @@
 @import "fontsPreload";
 @import "fonts";
 @import "iconsfont";
+@import "vars";
 @import "px2em";
 @import "adaptiveValue";
 @import "reset";
-@import "colors";
 @import "icons";
 @import "theme";
 @import "global";
 @import "header";
+@import "index";
 @import "footer";
-.page__index {
-}
 @import "mediaQueries";
