--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -1,5 +1,3 @@
-$drop-shadow: drop-shadow(0px 1px 3px var(--main-color));
-
 html {
 	.page__theme {
 		&.icon-moon,
@@ -12,7 +10,7 @@ html {
 				font-size: em(24px, 14px);
 			}
 			&:hover {
-				filter: $drop-shadow;
+				filter: $dropShadow;
 			}
 		}
 	}
