--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,33 @@
   content: "\e909";
 }
 
+html {
+  --orange-color: #f0a446;
+  --gray-color: #757575;
+}
+
+html .wrapper {
+  -webkit-transition: color 0.3s ease 0s;
+  -o-transition: color 0.3s ease 0s;
+  transition: color 0.3s ease 0s;
+}
+
+html.light {
+  --main-color: #214e41;
+  --icon-color: var(--main-color);
+  --base-color: #ffffff;
+  --accent-color: #43806c;
+  --light-color: #e3eeed;
+}
+
+html.dark {
+  --main-color: rgb(114, 194, 181);
+  --icon-color: var(--main-color);
+  --base-color: rgba(43, 43, 43, 1);
+  --accent-color: rgb(131, 231, 193);
+  --light-color: rgba(73, 77, 77, 1);
+}
+
 /*Reset Styles*/
 
 * {
@@ -166,33 +193,6 @@ h6 {
 
 /*--------------------*/
 
-html {
-  --orange-color: #f0a446;
-  --gray-color: #757575;
-}
-
-html .wrapper {
-  -webkit-transition: color 0.3s ease 0s;
-  -o-transition: color 0.3s ease 0s;
-  transition: color 0.3s ease 0s;
-}
-
-html.light {
-  --main-color: #214e41;
-  --icon-color: var(--main-color);
-  --base-color: #ffffff;
-  --accent-color: #43806c;
-  --light-color: #e3eeed;
-}
-
-html.dark {
-  --main-color: rgb(114, 194, 181);
-  --icon-color: var(--main-color);
-  --base-color: rgba(43, 43, 43, 1);
-  --accent-color: rgb(131, 231, 193);
-  --light-color: rgba(73, 77, 77, 1);
-}
-
 .svg-benefits-dims {
   width: 58px;
   height: 45px;
@@ -272,7 +272,7 @@ html.dark .logo__light {
 }
 
 html.light .page__theme.icon-moon {
-  margin-top: 0.3125em;
+  margin-top: 0.3571428571em;
   -webkit-transform: rotate(325deg) scale(1);
       -ms-transform: rotate(325deg) scale(1);
           transform: rotate(325deg) scale(1);
@@ -391,6 +391,10 @@ main {
           flex: 1 1 auto;
 }
 
+.page {
+  margin-top: calc(60px + 30 * ((100vw - 320px) / 1120));
+}
+
 .btn {
   min-width: -webkit-fit-content;
   min-width: -moz-fit-content;
@@ -398,7 +402,7 @@ main {
 }
 
 .btn__green {
-  padding: 0.625em 0.875em;
+  padding: 0.7142857143em 1em;
   background-color: var(--accent-color);
   border-radius: 6px;
   color: var(--base-color);
@@ -416,6 +420,13 @@ main {
           filter: drop-shadow(0px 1px 3px var(--main-color));
 }
 
+.title {
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.28em;
+}
+
 .header {
   position: fixed;
   display: -webkit-box;
@@ -423,7 +434,7 @@ main {
   display: flex;
   width: 100%;
   height: calc(60px + 30 * ((100vw - 320px) / 1120));
-  padding: 1.5625em 0;
+  padding: 1.7857142857em 0;
   background-color: var(--base-color);
   color: var(--main-color);
 }
@@ -570,7 +581,7 @@ main {
   bottom: 0;
   left: 0;
   background-color: var(--accent-color);
-  height: 0.09375em;
+  height: 0.1071428571em;
   -webkit-transition: all 0.3s ease 0s;
   -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
@@ -620,8 +631,8 @@ main {
   -webkit-transform: rotate(45deg);
       -ms-transform: rotate(45deg);
           transform: rotate(45deg);
-  margin-left: 0.625em;
-  margin-top: -0.3125em;
+  margin-left: 0.7142857143em;
+  margin-top: -0.3571428571em;
 }
 
 .login-list {
@@ -658,7 +669,7 @@ main {
 }
 
 .login-list > li a::before {
-  margin-right: 0.9375em;
+  margin-right: 1.0714285714em;
 }
 
 .login-list a {
@@ -670,10 +681,80 @@ body._pc .login:hover::after {
   -webkit-transform: rotate(-135deg);
       -ms-transform: rotate(-135deg);
           transform: rotate(-135deg);
-  margin-top: 0.3125em;
+  margin-top: 0.3571428571em;
 }
 
-@media (min-width: 62em) {
+.no-webp .hero {
+  background: url(../img/hero-bg.jpg) 60% 50%/cover no-repeat; }
+
+.hero__content {
+  padding: 160px 0 280px 0;
+}
+
+html.no-webp.dark .hero {
+  background: -webkit-gradient(linear, left top, right top, color-stop(-75%, rgb(0, 0, 0)), color-stop(35%, rgba(0, 0, 0, 0.5)), color-stop(80%, rgba(0, 0, 0, 0))), url(../img/hero-bg.jpg) 60% 50%/cover no-repeat;
+  background: -o-linear-gradient(left, rgb(0, 0, 0) -75%, rgba(0, 0, 0, 0.5) 35%, rgba(0, 0, 0, 0) 80%), url(../img/hero-bg.jpg) 60% 50%/cover no-repeat;
+  background: linear-gradient(90deg, rgb(0, 0, 0) -75%, rgba(0, 0, 0, 0.5) 35%, rgba(0, 0, 0, 0) 80%), url(../img/hero-bg.jpg) 60% 50%/cover no-repeat; }
+
+.offer__title {
+  max-width: calc(300px + 220 * ((100vw - 320px) / 1120));
+  margin-bottom: calc(24px + 16 * ((100vw - 320px) / 1120));
+}
+
+.offer__text {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.5em;
+  margin-bottom: calc(12px + 4 * ((100vw - 320px) / 1120));
+}
+
+.offer__form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 28.7857142857em;
+  border-radius: 6px;
+  overflow: hidden;
+  background: var(--base-color);
+}
+
+.offer__input {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  padding: 1.4285714286em;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.43em;
+  color: #222222;
+}
+
+.offer__input::-webkit-input-placeholder {
+  color: #222222;
+}
+
+.offer__input::-moz-placeholder {
+  color: #222222;
+}
+
+.offer__input:-ms-input-placeholder {
+  color: #222222;
+}
+
+.offer__input::-ms-input-placeholder {
+  color: #222222;
+}
+
+.offer__input::placeholder {
+  color: #222222;
+}
+
+.offer__submit {
+  padding: 1.4285714286em 2.5em;
+  border-radius: 0;
+}
+
+@media (min-width: 70.8571428571em) {
   .menu__list {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -684,7 +765,7 @@ body._pc .login:hover::after {
   }
 
   .menu__list > li {
-    padding: 0.625em 0;
+    padding: 0.7142857143em 0;
   }
 
   .login-list {
@@ -715,7 +796,7 @@ body._pc .login:hover::after {
   }
 }
 
-@media (max-width: 61.9375em) {
+@media (max-width: 70.7857142857em) {
   .login._active .login-list,
   body._pc .login:hover .login-list {
     -webkit-transform: translate(50%, 0);
@@ -791,7 +872,7 @@ body._pc .login:hover::after {
   }
 
   .header__menu {
-    margin-bottom: 1.25em;
+    margin-bottom: 1.4285714286em;
   }
 
   .header-btn__demo {
@@ -805,7 +886,7 @@ body._pc .login:hover::after {
     left: 0;
     width: 100%;
     height: 100%;
-    padding: 6.25em 1.875em 1.875em 1.875em;
+    padding: 7.1428571429em 2.1428571429em 2.1428571429em 2.1428571429em;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -855,7 +936,7 @@ body._pc .login:hover::after {
   }
 
   .menu__link {
-    font-size: 1.5em;
+    font-size: 1.7142857143em;
   }
 
   .login {
@@ -864,27 +945,31 @@ body._pc .login:hover::after {
 
   .login-list {
     width: 768px;
-    height: 4.6875em;
+    height: 5.3571428571em;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    margin-top: 0.9375em;
+    margin-top: 1.0714285714em;
     top: 100%;
     right: 50%;
-    gap: 1.25em;
+    gap: 1.4285714286em;
   }
 
   .login-list li {
-    padding: 0.9375em;
-    font-size: 1.125em;
+    padding: 1.0714285714em;
+    font-size: 1.2857142857em;
   }
 }
 
-@media (max-width: 61.9375em) and (max-width: 1200px) {
+@media (max-width: 70.7857142857em) and (max-width: 1200px) {
   .login-list {
     width: calc(300px + 468 * ((100vw - 320px) / 880));
   }
 }
+
+.webp .hero { background: url(../img/hero-bg.webp) 60% 50%/cover no-repeat; }
+
+html.webp.dark .hero { background: -webkit-gradient(linear, left top, right top, color-stop(-75%, rgb(0, 0, 0)), color-stop(35%, rgba(0, 0, 0, 0.5)), color-stop(80%, rgba(0, 0, 0, 0))), url(../img/hero-bg.webp) 60% 50%/cover no-repeat; background: -o-linear-gradient(left, rgb(0, 0, 0) -75%, rgba(0, 0, 0, 0.5) 35%, rgba(0, 0, 0, 0) 80%), url(../img/hero-bg.webp) 60% 50%/cover no-repeat; background: linear-gradient(90deg, rgb(0, 0, 0) -75%, rgba(0, 0, 0, 0.5) 35%, rgba(0, 0, 0, 0) 80%), url(../img/hero-bg.webp) 60% 50%/cover no-repeat; }
