--- a/scss/header.scss
+++ b/scss/header.scss
@@ -1,5 +1,7 @@
 .header {
+	box-shadow: 0px 0px 21px 0px rgb(0 0 0 / 10%);
 	position: fixed;
+	z-index: 5;
 	display: flex;
 	width: 100%;
 	@include adaptiv-value("height", 90, 60, 0);
@@ -77,12 +79,9 @@
 			@include adaptiv-value("margin-right", 50, 0, 1);
 		}
 		li {
+			position: relative;
 			min-width: fit-content;
-			&:hover {
-				.menu__link {
-					text-decoration: underline;
-				}
-			}
+			@extend %underline;
 		}
 		z-index: 2;
 		@media (min-width: em(992px)) {
